--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-
+    <h1 id="moneyDisplay">Your Money: 1000$</h1>
+    <div class="slots">
+        <div id="firstReel" class="reel"></div>
+        <div id="secondReel" class="reel"></div>
+        <div id="thirdReel" class="reel"></div>
+    </div>
+    <input type="number" placeholder="Your Bet" id="bet">
+    <div class="button" id="spin">SPIN</div>
+    <img src="" alt="">
 </body>
 </html>
