--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="firstReel" class="reel"></div>
         <div id="secondReel" class="reel"></div>
         <div id="thirdReel" class="reel"></div>
+        <h1 id="win">You won</h1>
     </div>
     <input type="number" placeholder="Your Bet" id="bet">
     <div class="button" id="spin">SPIN</div>
